# clai

./: Cargo.toml  config.toml  note.md  readme.md
src/: chat.rs  cli.rs  client.rs  client_old.rs  config.rs  data.rs  dirs.rs  lib.rs  main.rs  prompt.rs
src/client/: chat.rs  gemini.rs  mod.rs  openai.rs
src/command/: chat.rs  commit.rs  correction.rs  english.rs  image.rs  mod.rs  translate.rs
